--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myportfolio",
+  "homepage": "https://Weerawat-Saothong.github.io/MyPortfoio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +23,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
